--- a/lib/cg_multireg.wiki
+++ b/lib/cg_multireg.wiki
@@ -27,7 +27,7 @@ below this number. With this option, the maximum number of open files can
 be set manually (if the program e.g. does not deduce the proper limit, or
 you want to affect the distribution).
 
-This command can be distributed on a cluster or using multiple with
+This command can be distributed on a cluster or using multiple threads with
 [[joboptions|job options]] (more info with cg help joboptions)
 
 == Category ==
