--- a/lib/cg_process_multicompar.wiki
+++ b/lib/cg_process_multicompar.wiki
@@ -26,7 +26,7 @@ create the projectinfo.tsv file.
 ; **-split 1/0**: split multiple alternative genotypes over different line
 ; **-dbdir dbdir**: **dbdir** can also be given as an option (instead of second parameter)
 ; **-dbfile file**: Use **file** for extra (files in **dbdir** are already used) annotation 
-; **-m maxopenfiles** (--maxopenfiles): The number of files that a program
+; **-m maxopenfiles** (-maxopenfiles): The number of files that a program
 can keep open at the same time is limited. pmulticompar will distribute
 the subtasks thus, that the number of files open at the same time stays
 below this number. With this option, the maximum number of open files can
