--- a/lib/cg_process_project.wiki
+++ b/lib/cg_process_project.wiki
@@ -72,7 +72,7 @@ This option can be given more than once; all given files will be added
 ; -conv_nextseq 1/0: generate fastqs for nextseq run & create sample folders - rundir should be placed in projectdir
 of resulting variants. This option can be added multiple times (with different files)
 ; -bedfile bedfile: if bedfile is provided, coverage statistics will be calculated for this region using picard CalculateHsMetrics
-; -m maxopenfiles (--maxopenfiles): The number of files that a program
+; -m maxopenfiles (-maxopenfiles): The number of files that a program
 can keep open at the same time is limited. pmulticompar will distribute
 the subtasks thus, that the number of files open at the same time stays
 below this number. With this option, the maximum number of open files can
