renamed cg bed2sft to cg bed2tsv (old still works for compat)

--- a/lib/cg_bed2tsv.wiki
+++ b/lib/cg_bed2tsv.wiki
@@ -1,10 +1,10 @@
-= Bed2sft =
+= Bed2tsv =
 
 == Format ==
-cg bed2sft ?infile? ?outfile?
+cg bed2tsv ?infile? ?outfile?
 
 == Summary ==
-Converts data in bed format to sft (simple feature table) format
+Converts data in bed format to [[tsv]] format
 
 == Arguments ==
 ; **infile**: file to be converted, if not given, uses stdin. File may be compressed.
