--- a/docs/joboptions.wiki
+++ b/docs/joboptions.wiki
@@ -64,6 +64,7 @@ progress/errors by updating and checking the logfile.
 List of all options supported by job enabled commands:
 ; -d value (--distribute): distribute method, see in description (also -distribute)
 ; -dpriority value: (only for sge) run jobs with the given priority (default is 0)
+; -dqueue value: (only for sge) Use this option if you want to run on another queue than the default all.q
 ; -dcleanup success/never/allways: Allows you to keep all run/log files in the log_jobs
 dirs even if a jub is successfull (**never**), or to allways delete them (**allways**)
 instead of only deleting them after a succesfull run (**success**)
