--- a/lib/cg_process_illumina.wiki
+++ b/lib/cg_process_illumina.wiki
@@ -9,6 +9,9 @@ This starts from fastq read data and results in a genomecomb directory
 with annotated variant comparisons.
 
 == Description ==
+This command is depricated. The same functionality is available through the
+more generic process_project.
+
 As input, the command expects a basic genomecomb project directory with
 illumina sequencing data (projectdir).
 
@@ -94,7 +97,7 @@ if 1, bam files are realigned using gatk, use **value** srma to align using srma
 ; **-dbfile file**: Use **file** for extra (files in **dbdir** are already used) annotation 
 ; **-conv_nextseq 1/0**: generate fastqs for nextseq run & create sample folders - rundir should be placed in projectdir
 of resulting variants. This option can be added multiple times (with different files)
-; **-bedfile bedfile**: if bedfile is provided, coverage statistics will be calculated for this region using picard CalculateHsMetrics
+; **-targetfile targetfile**: if targetfile is provided, coverage statistics will be calculated for this region using picard CalculateHsMetrics
 ; **-m maxopenfiles** (-maxopenfiles): The number of files that a program
 can keep open at the same time is limited. pmulticompar will distribute
 the subtasks thus, that the number of files open at the same time stays
@@ -119,4 +122,4 @@ cg process_illumina -d sge testproject /complgen/refseq/hg19
 }}}
 
 == Category ==
-Process
+Depricated
